<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView2" android:scaleType="centerCrop" android:contentDescription="@string/app_background"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView3" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@android:color/white"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/toggleButton"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.348"
                android:textOff="@string/mens" android:textOn="@string/mens" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_toggle"
                android:textStyle="bold" android:textSize="18sp"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" android:textSize="18sp" android:fontFamily="@font/montserrat"
                android:textStyle="bold" android:background="@drawable/swoosh_toggle" android:textOff="@string/womens"
                android:textOn="@string/womens" android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textSize="18sp"
                android:fontFamily="@font/montserrat" android:textStyle="bold"
                android:background="@drawable/swoosh_toggle" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed"
                android:textColor="@android:color/white"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button2" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:fontFamily="@font/montserrat" android:textStyle="bold"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>